--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <button>Submit</button>
     </div>
 
+    <div id="image">
+        <p style="color: aliceblue; margin-bottom: 13px;">MADE WITH</p>
+        <img src="/elements/Modern_Brain_Technology_Logo-removebg-preview.png" height="50px" width="60px"
+    </div>
+
 </div>
 
 </body>
