--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!doctype html>
 <head>
     <title>Simple ML project</title>
     <link rel="stylesheet" type="text/css" href="index.css">
@@ -20,7 +20,7 @@
 
     <div id="image">
         <p style="color: aliceblue; margin-bottom: 13px;">MADE WITH</p>
-        <img src="/elements/Modern_Brain_Technology_Logo-removebg-preview.png" height="50px" width="60px">
+        <img src="/elements/Modern_Brain_Technology_Logo-removebg-preview.png" height="50" width="60">
     </div>
 
 </div>
