--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <head>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Simple ML project</title>
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 
 <body>
-    
+
 <div id="container">
 
     <div class="display">
@@ -24,7 +27,15 @@
     </div>
 
 </div>
-
+<div id="msg">
+    <h1>Simpleton Chatbot</h1>
+    <ul>
+        <li>This chatbot is made for learning purpose</li>
+        <li>Ask "whats your name", "date", "who created you" etc</li>
+        <li>You can add your questions, just fork the repo and then you are good to go</li>
+        <li>This chatbot is not smart nor LLM</li>
+    </ul>
+</div>
 </body>
 <script src="simple-ml-convrse.js"></script>
 </html>
