--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
 </div>
-<div id="msg">
+<div id="msg" class="ele">
     <h1>Simpleton Chatbot</h1>
     <ul>
         <li>This chatbot is made for learning purpose</li>
