--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         <li>This chatbot is not smart nor LLM</li>
     </ul>
 </div>
+
+<footer>
+    <strong><a href="www.github.com/masterujjval" target="_blank">GitHub</a></strong>
+</footer>
 </body>
 <script src="simple-ml-convrse.js"></script>
 </html>
