--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </div>
 
 <footer>
-    <strong><a href="www.github.com/masterujjval" target="_blank">GitHub</a></strong>
+    <strong><a href="https://www.github.com/masterujjval" target="_blank">GitHub</a></strong>
 </footer>
 </body>
 <script src="simple-ml-convrse.js"></script>
