--- a/index.html
+++ b/index.html
@@ -41,5 +41,5 @@
     <strong><a href="https://www.github.com/masterujjval" target="_blank">GitHub</a></strong>
 </footer>
 </body>
-<script src="simple-ml-convrse.js"></script>
+<script src="simple-ml-converse.js"></script>
 </html>
